--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "bugs": {
     "url": "https://github.com/amcnulty/Flashcard-Generator/issues"
   },
+  "bin": {
+    "flashcard": "index.js"
+  },
   "homepage": "https://github.com/amcnulty/Flashcard-Generator#readme",
   "devDependencies": {
     "chai": "^4.1.2",
