--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "url": "https://github.com/amcnulty/Flashcard-Generator/issues"
   },
   "bin": {
-    "flashcard": "index.js"
+    "flashgen": "index.js"
   },
   "homepage": "https://github.com/amcnulty/Flashcard-Generator#readme",
   "devDependencies": {
